# loc-idle

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
src/: lib.rs  macros.rs  main.rs  theme.rs  upgrade.rs  widget.rs
