[package]
name = "loc-idle"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/romac/loc-idle"
publish = false
description = "An incremental game for producing code inspired by Universal Paperclips"

[dependencies]
bigdecimal = "0.4.5"
iced = { version = "0.13.1", features = ["debug", "tokio"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
dist = true
cargo-dist-version = "0.22.1"
ci = "github"
installers = []
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "aarch64-unknown-linux-gnu",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc"
]

[workspace.metadata.release]
tag-name = "v{{version}}"
